tests/fixtures/pass/stdlib_async_cancel_gather_vm.walrus
import "std/async" as asyncx;

let left = asyncx.sleep(20);
let right = asyncx.sleep(20);
let both = asyncx.gather([left, right]);

println(asyncx.cancel(both));
println(asyncx.cancelled(both));
println(asyncx.cancelled(left));
println(asyncx.cancelled(right));

try {
    await both;
} catch err {
    println(err);
};
