tests/fixtures/fail/stdlib/stdlib_async_cancel_uncaught_vm.walrus
import "std/async" as asyncx;

let task = asyncx.sleep(20);
asyncx.cancel(task);
println(await task);
